llvm-toolchain-3.8 (1:3.8.1-19~exp2) experimental; urgency=medium

  * mark the first symbol as (optional) as it differs from ld and gold

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 25 Mar 2017 16:37:44 +0100

llvm-toolchain-3.8 (1:3.8.1-19~exp1) experimental; urgency=medium

  [ Rebecca N. Palmer ]
  * Use versioned symbols (Closes: #849098)

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 19 Mar 2017 22:09:04 +0100

llvm-toolchain-3.8 (1:3.8.1-18) unstable; urgency=medium

  * Fix the broken liblldb-3.8-dev links (Closes: #856864)

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 12 Mar 2017 09:49:18 +0100

llvm-toolchain-3.8 (1:3.8.1-17) unstable; urgency=medium

  * Disable NEON generation on armhf (Closes: #841474, #842142)
    Thanks to Pauli for the fix
  * Remove the info section from the generated manpages (Closes: #846269)
  * Fix the path to lldb-server (to lldb-server-3.8) (Closes: #846638)
  * Also install python-lldb-3.8 when installing lldb-3.8 (Closes: #846612)
  * Disable libedit usage in lldb because of garbage (Closes: #846616)
  * d/p/lldb-server-link.diff Fix the lldb hang. It was due to a linking issue.
    Thanks to Pavel Labath (Closes: #846640)

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 09 Jan 2017 21:24:17 +0100

llvm-toolchain-3.8 (1:3.8.1-16) unstable; urgency=medium

  * Fix segfaults in the memory sanitizers (Closes: #842642)
    Caused by the newer glibc. Many thanks for Nobert Lange for everything
  * Enable the sanitizers testsuite

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 11 Nov 2016 16:14:31 +0100

llvm-toolchain-3.8 (1:3.8.1-15) unstable; urgency=medium

  * Limit build-deps on g++-multilib where it is available:
    amd64 i386 kfreebsd-amd64 mips mips64 mips64el mipsel powerpc ppc64 s390
    s390x sparc sparc64 x32

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 06 Nov 2016 15:44:34 +0100

llvm-toolchain-3.8 (1:3.8.1-14) unstable; urgency=medium
