@@ -1,6 +1,7 @@
 llvm-toolchain-3.8 (1:3.8.1-19~exp2) experimental; urgency=medium
 
   * mark the first symbol as (optional) as it differs from ld and gold
+  * remove the empty llvm package (Closes: #858626)
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 25 Mar 2017 16:37:44 +0100
 
